# ml-climate-zone-clustering

./: .gitignore  DOCUMENTATION.md  README.md  explore_data.py  pyproject.toml
output/: cluster17.tif.aux.xml  cluster_18.tif.aux.xml  cluster_19.tif.aux.xml  cluster_20.tif.aux.xml  cluster_21.tif.aux.xml  cluster_33.tif.aux.xml  small_cluster3.tif
scripts/: classes.py  main.py  method_evaluation.py  raster_alignment.py  raster_clip.py  raster_reclassification.py  raster_stack.py
