[project]
name = "climate-zones-machine-learning-project"
version = "0.1.0"
description = ""
authors = [
    {name = "spscheidl",email = "sylvia.pscheidl@heigit.org"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas (>=1.1.1,<2.0.0)",
    "rasterio (>=1.4.3,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "hdbscan (>=0.8.40,<0.9.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "ruff (>=0.13.0,<0.14.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
